# embree-min

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
